--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "employee_tracker",
   "version": "1.0.0",
-  "description": "![alt text](assets/images/screenshot.png)",
+  "description": " ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/heparish/Employee-Tracker"
   },
   "keywords": [],
-  "author": "",
+  "author": "Haley Parish",
   "license": "ISC",
   "bugs": {},
   "homepage": "https://github.com/heparish/Employee-Tracker",
